refactor: delete to everything minimal

--- a/.config/emacs/config.org
+++ b/.config/emacs/config.org
@@ -19,20 +19,20 @@ By the way, managed to make it work with prettier using prettier-minor-mode whic
 * Core Packages
 ** Global settings
 #+BEGIN_SRC emacs-lisp
-  (scroll-bar-mode -1)        ; Disable visible scrollbar
-  (tool-bar-mode -1)          ; Disable the toolbar
-  (tooltip-mode -1)           ; Disable tooltips
-  (global-display-line-numbers-mode)
-  (set-face-attribute 'default nil :height 180)
-  (setq make-backup-files nil)
-  (setq
-      inhibit-startup-message t
-      display-line-numbers-type 'relative)
-  (setq mac-option-modifier 'meta)
-  (setq auth-sources '("~/.authinfo.gpg"))
-  (set-frame-font "SFMono Nerd Font-15")
-  (global-visual-line-mode 1)
+    (scroll-bar-mode -1)        ; Disable visible scrollbar
+    (tool-bar-mode -1)          ; Disable the toolbar
+    (tooltip-mode -1)           ; Disable tooltips
+    (global-display-line-numbers-mode)
+    (setq make-backup-files nil)
+    (setq
+        inhibit-startup-message t
+        display-line-numbers-type 'relative)
+    (setq mac-option-modifier 'meta)
+    (setq auth-sources '("~/.authinfo.gpg"))
+    (set-frame-font "SFMono Nerd Font-15")
+    (global-visual-line-mode 1)
 #+End_SRC
+
 
 ** Make Emacs faster
 *** Adjust gc-cons-threshold
@@ -71,77 +71,23 @@ I created in ./early-init.el
     #+END_SRC
 ** Evil mode
 #+begin_src emacs-lisp
-  (use-package evil
-    :init
-    (setq evil-want-keybinding nil)
+  (setq evil-want-keybinding nil)
+  (use-package evil-leader
     :config
-    (evil-mode 1))
+    (global-evil-leader-mode))
 
   (use-package evil-collection
-    :after evil
+    :after evil-leader
     :ensure t
     :config
     (evil-collection-init))
+
+  (use-package evil
+    :after evil-collection
+    :init
+    :config
+    (evil-mode 1))
 #+end_src
-
-** Search & Completion
-*** Searching
-
-#+BEGIN_SRC emacs-lisp
-(use-package swiper :ensure t)
-#+END_SRC
-
-*** Completion
-
-#+BEGIN_SRC emacs-lisp
-  (use-package ivy
-    :diminish
-    :bind (("C-s" . swiper)
-           :map ivy-minibuffer-map
-           ("<tab>" . ivy-alt-done)	
-           ("C-l" . ivy-alt-done)
-           ("C-j" . ivy-next-line)
-           ("C-k" . ivy-previous-line)
-           :map ivy-switch-buffer-map
-           ("C-k" . ivy-previous-line)
-           ("C-l" . ivy-done)
-           ("C-d" . ivy-switch-buffer-kill)
-           :map ivy-reverse-i-search-map
-           ("C-k" . ivy-previous-line)
-           ("C-d" . ivy-reverse-i-search-kill))
-    :config
-    (ivy-mode 1))
-#+END_SRC
-
-*Enhancing Ivy*
-#+BEGIN_SRC emacs-lisp
-  (use-package counsel
-    :bind (("M-x" . counsel-M-x)
-  	 ("C-x b" . counsel-ibuffer)
-  	 ("C-x C-f" . counsel-find-file)
-  	 :map minibuffer-local-map
-  	 ("C-x C-r" . counsel-minibuffer-history))
-    :config
-    (setq ivy-initial-inputs-alist nil))
-#+END_SRC
-
-*Filtering Ivy*
-#+BEGIN_SRC emacs-lisp
-  (use-package ivy-prescient
-    :after counsel
-    :custom
-    (ivy-prescient-enable-filtering nil)
-    :config
-    (ivy-prescient-mode 1))
-#+END_SRC
-
-*Better interface*
-#+BEGIN_SRC emacs-lisp
-  (use-package ivy-rich
-    :config
-    (ivy-rich-mode 1)
-    (setcdr (assq t ivy-format-functions-alist) #'ivy-format-function-line))
-#+END_SRC
 
 ** Help in emacs
 *** Which key
@@ -210,59 +156,6 @@ I created in ./early-init.el
     :config
     (yas-global-mode 1))
 #+END_SRC
-** Icons
-#+BEGIN_SRC emacs-lisp
-  (use-package all-the-icons
-    :if (display-graphic-p))
-#+END_SRC
-** Rainbow delimiters
-#+BEGIN_SRC emacs-lisp
-  (use-package rainbow-delimiters
-    :hook (prog-mode . rainbow-delimiters-mode))
-#+END_SRC
-** Buffer contrast
-#+BEGIN_SRC emacs-lisp
-  (use-package solaire-mode
-    :ensure t
-    :config
-    (solaire-global-mode))
-#+END_SRC
-** Buffer automatic resize
-#+BEGIN_SRC emacs-lisp
-  (use-package golden-ratio
-    :ensure t
-    :config
-    ;;(golden-ratio-mode)
-    (setq golden-ratio-auto-scale t))
-#+END_SRC
-** Better modeline
-#+BEGIN_SRC emacs-lisp
-  (use-package doom-modeline
-    :ensure t
-    :init
-    (doom-modeline-mode 1))
-#+END_SRC
-** Buffer padding in frame
-#+BEGIN_SRC emacs-lisp
-(use-package spacious-padding
-  :ensure t
-  :config
-  (setq spacious-padding-subtle-mode-line
-	`( :mode-line-active 'default
-	   :mode-line-inactive vertical-border))
-  (spacious-padding-mode 1))
-#+END_SRC
-** Command chaining
-#+BEGIN_SRC emacs-lisp
-(use-package hydra
-  :defer t)
-
-(defhydra hydra-text-scale (:timeout 4)
-  "scale text"
-  ("j" text-scale-increase "in")
-  ("k" text-scale-decrease "out")
-  ("f" nil "finished" :exit t))
-#+END_SRC
 ** Window switching
 #+BEGIN_SRC emacs-lisp
 (use-package ace-window
@@ -271,6 +164,7 @@ I created in ./early-init.el
 #+END_SRC
 
 ** Versioning
+*** MAGIT
 #+BEGIN_SRC emacs-lisp
   (use-package magit
     :commands (magit-status magit-get-current-branch)
@@ -297,115 +191,11 @@ I created in ./early-init.el
     :config
     (setq code-review-fill-column 80)
     (setq code-review-new-buffer-window-strategy #'switch-to-buffer-other-window)
-    ;; SET KEYBINDINGS
     )
 
 #+END_SRC
 
-** Project management
-#+BEGIN_SRC emacs-lisp
-  (use-package projectile
-    :ensure t
-    :init (projectile-mode)
-    :config
-    (setq project-switch-project-action 'magit-status)
-    :bind ("C-x p" . 'projectile-command-map))
-#+END_SRC
-
-** Code completion
-#+BEGIN_SRC emacs-lisp
-(use-package cape)
-
-(use-package orderless
-  :init
-  ;; Tune the global completion style settings to your liking!
-  ;; This affects the minibuffer and non-lsp completion at point.
-  (setq completion-styles '(orderless partial-completion basic)
-        completion-category-defaults nil
-        completion-category-overrides nil))
-#+END_SRC
-
-** Code completion UI
-#+BEGIN_SRC emacs-lisp
-(use-package corfu
-  ;; Optional customizations
-  :custom
-  (corfu-cycle t)                ;; Enable cycling for `corfu-next/previous'
-  (corfu-auto t)                 ;; Enable auto completion
-  (corfu-quit-at-boundary nil)   ;; Never quit at completion boundary
-  (corfu-quit-no-match nil)      ;; Never quit, even if there is no match
-  (corfu-preselect 'first)      ;; Preselect the prompt
-  (corfu-on-exact-match nil)     ;; Configure handling of exact matches
-  (corfu-popupinfo-delay nil)
-  :hook
-  (corfu-mode . corfu-popupinfo-mode)
-  :init
-  (global-corfu-mode))
-
-;; A few more useful configurations...
-(use-package emacs
-  :init
-  ;; TAB cycle if there are only few candidates
-  (setq completion-cycle-threshold 3)
-
-  ;; Emacs 28: Hide commands in M-x which do not apply to the current mode.
-  ;; Corfu commands are hidden, since they are not supposed to be used via M-x.
-  (setq read-extended-command-predicate
-        #'command-completion-default-include-p)
-
-  ;; Enable indentation+completion using the TAB key.
-  ;; `completion-at-point' is often bound to M-TAB.
-  (setq tab-always-indent 'complete))
-
-(use-package kind-icon
-  :ensure t
-  :after corfu
-  :custom
-  (kind-icon-default-face 'corfu-default) ; to compute blended backgrounds correctly
-  :config
-  (add-to-list 'corfu-margin-formatters #'kind-icon-margin-formatter))
-#+END_SRC
-
-** LSP
-#+BEGIN_SRC emacs-lisp
-    (use-package lsp-mode
-     :commands lsp
-     :custom
-     (lsp-prefer-flymake nil)
-     (lsp-completion-provider :none) ;; we use Corfu!
-     :config
-     (setq lsp-keymap-prefix "C-c l")
-     (setq lsp-idle-delay 0.500)
-     (setq lsp-log-io nil) ; if set to true can cause a performance hit
-     ;; ESLINT configuration
-     (setq lsp-eslint-auto-fix-on-save t)
-     (setq lsp-eslint-enable t)
-     (setq lsp-restart 'auto-restart)
-     :hook ((typescript-ts-mode . lsp-deferred)
-            (lsp-mode . yas-minor-mode)
-            (lsp-mode . lsp-enable-which-key-integration)))
-
-
-
-  (use-package lsp-ui
-   :commands lsp-ui-mode
-   :bind ("M-d" . lsp-ui-doc-toggle)
-   :custom
-   (lsp-ui-doc-alignment 'at-point)
-   :config
-   (setq lsp-ui-sideline-show-diagnostics t
-         lsp-ui-sideline-show-hover nil)
-   :hook
-   (lsp-mode . lsp-ui-mode))
-
-  (use-package flycheck
-   :ensure t
-   :init (global-flycheck-mode))
-
-  (use-package prettier-js
-    :hook
-    (typescript-ts-mode . prettier-js-mode))
-#+END_SRC
+** Coding
 *** Typescript
 #+BEGIN_SRC emacs-lisp
   ;; CURRENTLY THIS DOES NOT WORK
@@ -417,177 +207,6 @@ I created in ./early-init.el
       :mode ("\\.ts\\'" . typescript-ts-mode)
       )
 #+END_SRC
-*** Rust
-#+BEGIN_SRC emacs-lisp
-(use-package rustic
-  :ensure t
-  :bind (:map rustic-mode-map
-        ("<f5>" . rustic-cargo-run))
-  :config
-  (defun rustic-mode-auto-save-hook ()
-    "Enable auto-saving in rustic-mode buffers."
-    (when buffer-file-name
-    (setq-local compilation-ask-about-save nil)))
-  :hook
-  (rustic-mode . (lambda()
-		   (rustic-mode-auto-save-hook)
-		   (setq rustic-format-display-method 'ignore
-			 rustic-format-trigger 'on-save
-			 rustic-compile-display-method 'switch-to-buffer
-			 compilation-scroll-output t
-			 flycheck-checker 'rustic-clippy))))
-#+END_SRC
-*** C
-**** Setting up electric pair mode
-#+begin_src emacs-lisp
-  (use-package cc-mode
-    :hook
-    (c-mode-common-hook . electric-pair-mode))
-#+end_src
-*** Treemacs
-#+BEGIN_SRC emacs-lisp
-  (use-package lsp-treemacs
-    :ensure t
-    :config
-    (setq lsp-treemacs-sync-mode 1))
-#+END_SRC
-*** Debugging with dap-mode
-#+begin_src emacs-lisp
-  ;; dap-mode setup for Node.js
-  (use-package dap-mode
-    :ensure t
-    :after lsp-mode
-    :config
-    (require 'dap-node)
-    (dap-node-setup) ;; Automatically installs Node debug adapter if needed
-    (dap-register-debug-template
-     "Node.js: Attach"
-     (list :type "node"
-           :request "attach"
-           :name "Node.js: Attach to Process"
-  	 :localRoot  nil
-  	 :remoteRoot nil
-           :port 9229))
-    ;; Other dap configurations...
-    )
-#+end_src
-** Tree file navigation
-#+begin_src emacs-lisp
-(use-package treemacs
-  :ensure t
-  :defer t
-  :init
-  (with-eval-after-load 'winum
-    (define-key winum-keymap (kbd "M-0") #'treemacs-select-window))
-  :config
-  (progn
-    (setq treemacs-collapse-dirs                   (if treemacs-python-executable 3 0)
-          treemacs-deferred-git-apply-delay        0.5
-          treemacs-directory-name-transformer      #'identity
-          treemacs-display-in-side-window          t
-          treemacs-eldoc-display                   'simple
-          treemacs-file-event-delay                2000
-          treemacs-file-extension-regex            treemacs-last-period-regex-value
-          treemacs-file-follow-delay               0.2
-          treemacs-file-name-transformer           #'identity
-          treemacs-follow-after-init               t
-          treemacs-expand-after-init               t
-          treemacs-find-workspace-method           'find-for-file-or-pick-first
-          treemacs-git-command-pipe                ""
-          treemacs-goto-tag-strategy               'refetch-index
-          treemacs-header-scroll-indicators        '(nil . "^^^^^^")
-          treemacs-hide-dot-git-directory          t
-          treemacs-indentation                     2
-          treemacs-indentation-string              " "
-          treemacs-is-never-other-window           nil
-          treemacs-max-git-entries                 5000
-          treemacs-missing-project-action          'ask
-          treemacs-move-forward-on-expand          nil
-          treemacs-no-png-images                   nil
-          treemacs-no-delete-other-windows         t
-          treemacs-project-follow-cleanup          nil
-          treemacs-persist-file                    (expand-file-name ".cache/treemacs-persist" user-emacs-directory)
-          treemacs-position                        'left
-          treemacs-read-string-input               'from-child-frame
-          treemacs-recenter-distance               0.1
-          treemacs-recenter-after-file-follow      nil
-          treemacs-recenter-after-tag-follow       nil
-          treemacs-recenter-after-project-jump     'always
-          treemacs-recenter-after-project-expand   'on-distance
-          treemacs-litter-directories              '("/node_modules" "/.venv" "/.cask")
-          treemacs-project-follow-into-home        nil
-          treemacs-show-cursor                     nil
-          treemacs-show-hidden-files               t
-          treemacs-silent-filewatch                nil
-          treemacs-silent-refresh                  nil
-          treemacs-sorting                         'alphabetic-asc
-          treemacs-select-when-already-in-treemacs 'move-back
-          treemacs-space-between-root-nodes        t
-          treemacs-tag-follow-cleanup              t
-          treemacs-tag-follow-delay                1.5
-          treemacs-text-scale                      nil
-          treemacs-user-mode-line-format           nil
-          treemacs-user-header-line-format         nil
-          treemacs-wide-toggle-width               70
-          treemacs-width                           35
-          treemacs-width-increment                 1
-          treemacs-width-is-initially-locked       t
-          treemacs-workspace-switch-cleanup        nil)
-
-    ;; The default width and height of the icons is 22 pixels. If you are
-    ;; using a Hi-DPI display, uncomment this to double the icon size.
-    ;;(treemacs-resize-icons 44)
-
-    (treemacs-follow-mode t)
-    (treemacs-filewatch-mode t)
-    (treemacs-fringe-indicator-mode 'always)
-    (when treemacs-python-executable
-      (treemacs-git-commit-diff-mode t))
-
-    (pcase (cons (not (null (executable-find "git")))
-                 (not (null treemacs-python-executable)))
-      (`(t . t)
-       (treemacs-git-mode 'deferred))
-      (`(t . _)
-       (treemacs-git-mode 'simple)))
-
-    (treemacs-hide-gitignored-files-mode nil))
-  :bind
-  (:map global-map
-        ("M-0"       . treemacs-select-window)
-        ("C-x t 1"   . treemacs-delete-other-windows)
-        ("C-x t t"   . treemacs)
-        ("C-x t d"   . treemacs-select-directory)
-        ("C-x t B"   . treemacs-bookmark)
-        ("C-x t C-t" . treemacs-find-file)
-        ("C-x t M-t" . treemacs-find-tag)))
-
-(use-package treemacs-evil
-  :after (treemacs evil)
-  :ensure t)
-
-(use-package treemacs-projectile
-  :after (treemacs projectile)
-  :ensure t)
-
-(use-package treemacs-icons-dired
-  :hook (dired-mode . treemacs-icons-dired-enable-once)
-  :ensure t)
-
-(use-package treemacs-magit
-  :after (treemacs magit)
-  :ensure t)
-
-(use-package treemacs-persp ;;treemacs-perspective if you use perspective.el vs. persp-mode
-  :after (treemacs persp-mode) ;;or perspective vs. persp-mode
-  :ensure t
-  :config (treemacs-set-scope-type 'Perspectives))
-
-(use-package treemacs-tab-bar ;;treemacs-tab-bar if you use tab-bar-mode
-  :after (treemacs)
-  :ensure t
-  :config (treemacs-set-scope-type 'Tabs))
-#+end_src
 ** Org notifications
 #+BEGIN_SRC emacs-lisp
 (use-package org-wild-notifier
@@ -617,8 +236,8 @@ I created in ./early-init.el
      ;; ("<tab>" . 'copilot-accept-completion)
      ;; ("<backtab>" . 'copilot-accept-completion-by-word))
         ("<backtab>" . 'copilot-accept-completion))
-    :hook
-    (lsp-mode . copilot-mode))
+    :init
+    (copilot-mode))
 #+END_SRC
 ** Workspace management
 #+begin_src emacs-lisp
@@ -641,63 +260,11 @@ I created in ./early-init.el
 
 ** Load theme
 #+begin_src emacs-lisp
-    ;;(use-package modus-themes)
-    ;;(load-theme 'modus-vivendi-tritanopia)
-  (use-package night-owl-theme
-    :config
-    (defun night-owl/ivy-format-function-line (cands)
-    "Transform CANDS into a string for minibuffer."
-    (let ((str (ivy-format-function-line cands)))
-      (font-lock-append-text-property 0 (length str) 'face 'ivy-not-current str)
-      str))
-    (setq ivy-format-function #'night-owl/ivy-format-function-line)
-    (setq night-owl-evil-cursors
-        '(("normal" night-owl-orange box)
-          ("insert" night-owl-cursor (bar . 2))
-          ("emacs" night-owl-cursor (bar . 2))
-          ("hybrid" night-owl-cursor (bar . 2))
-          ("replace" night-owl-gray (hbar . 2))
-          ("evilified" night-owl-yellow box)
-          ("visual" night-owl-gray (hbar . 2))
-          ("motion" night-owl-violet box)
-          ("lisp" night-owl-red box)
-          ("iedit" night-owl-magenta box)
-          ("iedit-insert" night-owl-magenta (bar . 2))))
+      ;;(use-package modus-themes)
+      ;;(load-theme 'modus-vivendi-tritanopia)
+      (use-package gruber-darker
+        :straight (:host github :repo "rexim/gruber-darker-theme"))
 
-    (defun night-owl-set-evil-cursor (state color shape)
-      (set (intern (format "evil-%s-state-cursor" state))
-  	 (list color shape)))
-
-  (defun night-owl-update-evil-cursors ()
-    (let ((current-theme (symbol-name (car custom-enabled-themes))))
-      (if (string-prefix-p "night-owl" current-theme)
-          (cl-loop for (state color style) in night-owl-evil-cursors
-                   do
-                   (night-owl-set-evil-cursor state (symbol-value color) style))
-        ;; not night-owl theme, restore default spacemacs cursors
-        (if (functionp 'spacemacs/add-evil-cursor)
-            (cl-loop for (state color shape) in spacemacs-evil-cursors
-                     do (spacemacs/add-evil-cursor state color shape))))))
-
-  (add-hook 'after-init-hook #'night-owl-update-evil-cursors)
-  ;; For spacemacs (comment this out if not using spacemacs):
-  (add-hook 'spacemacs-post-theme-change-hook #'night-owl-update-evil-cursors)
-
-  ;; For Evil (uncomment this if not using spacemacs):
-  ;; (defvar after-load-theme-hook nil
-  ;;   "Hook run after a color theme is loaded using `load-theme'.")
-  ;; 
-  ;; (defadvice load-theme (after run-after-load-theme-hook activate)
-  ;;   "Run `after-load-theme-hook'."
-  ;;   (message (format "Loading theme %s" (ad-get-arg 0)))
-  ;;   (run-hooks 'after-load-theme-hook))
-  ;; 
-  ;; (add-hook 'after-load-theme-hook #'night-owl-update-evil-cursors)
-    (load-theme 'night-owl t))
-  ;;(use-package vscode-dark-plus-theme
-    ;;:ensure t
-    ;;:config
-    ;;(load-theme 'vscode-dark-plus t))
 #+end_src
 ** Dashboard (starting screen)
 This fires up every time I open emacs
@@ -732,14 +299,6 @@ This fires up every time I open emacs
     (dashboard-open)
     (kill-other-buffers)))
 #+end_src
-** Org modern
-#+BEGIN_SRC emacs-lisp
-  (use-package org-modern
-    :ensure t  ; Ensure that org-modern is installed
-    :after org ; Load after org
-    :config
-    (global-org-modern-mode))
-#+END_SRC
 ** Multiple vterm buffers
 #+begin_src emacs-lisp
   (use-package multi-vterm
@@ -777,21 +336,6 @@ This fires up every time I open emacs
   	(evil-define-key 'normal vterm-mode-map (kbd "o")        #'evil-insert-resume)
   	(evil-define-key 'normal vterm-mode-map (kbd "<return>") #'evil-insert-resume))
 #+end_src
-** General
-#+BEGIN_SRC emacs-lisp
-  (use-package general)
-  (general-define-key
-   "C-c l" 'org-store-link
-   "C-c a" 'org-agenda
-   "C-c c" 'org-capture
-   "C-<tab>" 'persp-counsel-switch-buffer
-   "C-x k" 'persp-kill-buffer*
-   "<f8>" 'neotree-project-dir
-   "C-x C-w" 'kill-this-buffer
-   "s-w" 'save-buffer
-   "M-<f12>" 'multi-vterm-dedicated-toggle
-   "<escape>" 'keyboard-escape-quit)
-#+END_SRC
 * Custom functions
 ** Kill other buffers but current one
 #+begin_src emacs-lisp
