--- a/.config/emacs/config.org
+++ b/.config/emacs/config.org
@@ -16,23 +16,23 @@ By the way, managed to make it work with prettier using prettier-minor-mode whic
 ** TODO yasnipet, understand why parameter $0 is not working in cbel :emacs:
 ** TODO configure prescient-corfu                                    :emacs:
 ** TODO Fix tab in lsp as it is used in copilot                      :emacs:
-* Core Packages
+
+
 ** Global settings
 #+BEGIN_SRC emacs-lisp
-    (scroll-bar-mode -1)        ; Disable visible scrollbar
-    (tool-bar-mode -1)          ; Disable the toolbar
-    (tooltip-mode -1)           ; Disable tooltips
-    (global-display-line-numbers-mode)
-    (setq make-backup-files nil)
-    (setq
-        inhibit-startup-message t
-        display-line-numbers-type 'relative)
-    (setq mac-option-modifier 'meta)
-    (setq auth-sources '("~/.authinfo.gpg"))
-    (set-frame-font "SFMono Nerd Font-15")
-    (global-visual-line-mode 1)
+  (setq-default indent-tabs-mode nil)
+  (setq auth-sources '("~/.authinfo.gpg")
+        whitespace-style '(face tabs spaces trailing space-before-tab newline indentation empty space-after-tab space-mark tab-mark)
+        display-line-numbers-type 'relative
+        indent-tabs-mode nil)
+  (global-whitespace-mode 1)
+  (global-display-line-numbers-mode 1)
+  (column-number-mode 1)
+  (show-paren-mode 1)
+  (tool-bar-mode 0)
+  (menu-bar-mode 0)
+  (scroll-bar-mode 0)
 #+End_SRC
-
 
 ** Make Emacs faster
 *** Adjust gc-cons-threshold
@@ -60,15 +60,7 @@ lsp-mode can be compiled in 2 modes plist and hash-table based lsp-use-plists fl
 I created in ./early-init.el
 ``` emacs-lisp
 (setenv "LSP_USE_PLISTS" "true")
-```
-
-** Get path from shell
-    #+BEGIN_SRC emacs-lisp
-      (when (memq window-system '(mac ns x))
-      (exec-path-from-shell-initialize))
-      (when (daemonp)
-      (exec-path-from-shell-initialize))
-    #+END_SRC
+```:
 ** Evil mode
 #+begin_src emacs-lisp
   (setq evil-want-keybinding nil)
@@ -86,7 +78,14 @@ I created in ./early-init.el
     :after evil-collection
     :init
     :config
+    (setq evil-want-minibuffer t)
     (evil-mode 1))
+
+  (use-package evil-leader
+    :config
+    (evil-leader/set-leader "<SPC>")
+    :init
+    (global-evil-leader-mode))
 #+end_src
 
 ** Help in emacs
@@ -103,13 +102,8 @@ I created in ./early-init.el
 #+BEGIN_SRC emacs-lisp
   (use-package helpful
     :commands (helpful-callable helpful-variable helpful-command helpful-key)
-    :custom
-    (counsel-describe-function-function #'helpful-callable)
-    (counsel-describe-variable-function #'helpful-variable)
     :bind
-    ([remap describe-function] . counsel-describe-function)
     ([remap describe-command] . helpful-command)
-    ([remap describe-variable] . counsel-describe-variable)
     ([remap describe-key] . helpful-key))
 #+END_SRC
 ** Org
@@ -148,7 +142,6 @@ I created in ./early-init.el
       (compilation-filter . colorize-ansi-compilation-buffer))
 
 #+end_src
-* Additional packages
 ** Code snippets
 #+BEGIN_SRC emacs-lisp
   (use-package yasnippet
@@ -198,12 +191,11 @@ I created in ./early-init.el
 ** Coding
 *** Typescript
 #+BEGIN_SRC emacs-lisp
-  ;; CURRENTLY THIS DOES NOT WORK
+  ;; CURRENTLY THIS DOES NOT WORK but here maybe
 
 
     (use-package typescript-ts-mode
       :ensure t
-      ;;:hook (lsp--before-save . show-hello-world-message)
       :mode ("\\.ts\\'" . typescript-ts-mode)
       )
 #+END_SRC
@@ -228,16 +220,16 @@ I created in ./early-init.el
 #+END_SRC
 ** Copilot
 #+BEGIN_SRC emacs-lisp
-  (use-package copilot
-    :straight (:host github :repo "zerolfx/copilot.el" :files ("dist" "*.el"))
-    :ensure t
-    :bind (
-      :map copilot-mode
-     ;; ("<tab>" . 'copilot-accept-completion)
-     ;; ("<backtab>" . 'copilot-accept-completion-by-word))
-        ("<backtab>" . 'copilot-accept-completion))
-    :init
-    (copilot-mode))
+  ;;(use-package copilot
+  ;;  :straight (:host github :repo "zerolfx/copilot.el" :files ("dist" "*.el"))
+  ;;  :ensure t
+  ;;  :bind (
+  ;;    :map copilot-mode
+  ;;   ;; ("<tab>" . 'copilot-accept-completion)
+  ;;   ;; ("<backtab>" . 'copilot-accept-completion-by-word))
+  ;;      ("<backtab>" . 'copilot-accept-completion))
+  ;;  :init
+  ;;  (copilot-mode))
 #+END_SRC
 ** Workspace management
 #+begin_src emacs-lisp
@@ -260,45 +252,13 @@ I created in ./early-init.el
 
 ** Load theme
 #+begin_src emacs-lisp
-      ;;(use-package modus-themes)
-      ;;(load-theme 'modus-vivendi-tritanopia)
-      (use-package gruber-darker
-        :straight (:host github :repo "rexim/gruber-darker-theme"))
+    ;;(use-package modus-themes)
+    ;;(load-theme 'modus-vivendi-tritanopia)
+    (use-package gruber-darker-theme
+      :straight (:host github :repo "rexim/gruber-darker-theme")
+      :config (load-theme 'gruber-darker))
 
-#+end_src
-** Dashboard (starting screen)
-This fires up every time I open emacs
-
-#+begin_src emacs-lisp
-  (use-package dashboard
-  :ensure t
-  :config
-  (setq dashboard-banner-logo-title "Welcome to Emacs Dashboard")
-  (setq dashboard-startup-banner "~/Pictures/jarodevs.png")
-    ;; Value can be
-    ;; - nil to display no banner
-    ;; - 'official which displays the official emacs logo
-    ;; - 'logo which displays an alternative emacs logo
-    ;; - 1, 2 or 3 which displays one of the text banners
-    ;; - "path/to/your/image.gif", "path/to/your/image.png", "path/to/your/text.txt" or "path/to/your/image.xbm" which displays whatever gif/image/text/xbm you would prefer
-    ;; - a cons of '("path/to/your/image.png" . "path/to/your/text.txt")
-  (setq dashboard-center-content t)
-  (setq initial-buffer-choice (lambda () (get-buffer-create "*dashboard*")))
-  (setq dashboard-items '((recents  . 5)
-                          (bookmarks . 5)
-                          (projects . 5)
-                          (agenda . 5)))
-  ;;(setq dashboard-icon-type 'all-the-icons)
-  (setq dashboard-set-file-icons t)
-  (setq dashboard-set-navigator t)
-  (setq dashboard-projects-switch-function 'counsel-projectile-switch-project)
-  (dashboard-setup-startup-hook)
-  (defun cleanup ()
-    "Displays dashboard and kills other buffers"
-    (interactive)
-    (dashboard-open)
-    (kill-other-buffers)))
-#+end_src
+#+End_src
 ** Multiple vterm buffers
 #+begin_src emacs-lisp
   (use-package multi-vterm
@@ -336,7 +296,7 @@ This fires up every time I open emacs
   	(evil-define-key 'normal vterm-mode-map (kbd "o")        #'evil-insert-resume)
   	(evil-define-key 'normal vterm-mode-map (kbd "<return>") #'evil-insert-resume))
 #+end_src
-* Custom functions
+** Custom functions
 ** Kill other buffers but current one
 #+begin_src emacs-lisp
      (defun kill-other-buffers ()
@@ -345,3 +305,81 @@ This fires up every time I open emacs
         (mapc 'kill-buffer (delq (current-buffer) (buffer-list))))
 #+end_src
 
+** Tools for minibuffer completion
+#+begin_src emacs-lisp
+#+end_src
+** LSP
+ #+begin_src emacs-lisp
+   (use-package eglot
+     :ensure t
+     :config
+     (indent-tabs-mode)
+     (electric-pair-mode)
+     :hook (typescript-ts-mode . eglot-ensure))
+
+   (use-package company
+     :ensure t
+     :config
+     (global-company-mode))
+
+   (add-to-list 'auto-mode-alist '("\\.ts?x\\'" . typescript-ts-mode))
+ #+end_src
+** Git link
+#+begin_src emacs-lisp
+  (use-package git-link)
+#+end_src
+** Minibuffer enhancements
+*** Vertico - vertical interactive completion
+#+begin_src emacs-lisp
+  (use-package marginalia)
+  (use-package consult)
+  (use-package vertico
+    :init
+    (vertico-mode))
+
+  ;; Persist history over Emacs restarts. Vertico sorts by history position.
+  (use-package savehist
+    :init
+    (savehist-mode))
+
+  ;; A few more useful configurations...
+  (use-package emacs
+    :init
+    ;; Add prompt indicator to `completing-read-multiple'.
+    ;; We display [CRM<separator>], e.g., [CRM,] if the separator is a comma.
+    (defun crm-indicator (args)
+      (cons (format "[CRM%s] %s"
+                    (replace-regexp-in-string
+                     "\\`\\[.*?]\\*\\|\\[.*?]\\*\\'" ""
+                     crm-separator)
+                    (car args))
+            (cdr args)))
+    (advice-add #'completing-read-multiple :filter-args #'crm-indicator)
+
+    ;; Do not allow the cursor in the minibuffer prompt
+    (setq minibuffer-prompt-properties
+          '(read-only t cursor-intangible t face minibuffer-prompt))
+    (add-hook 'minibuffer-setup-hook #'cursor-intangible-mode)
+
+    ;; Emacs 28: Hide commands in M-x which do not work in the current mode.
+    ;; Vertico commands are hidden in normal buffers.
+    (setq read-extended-command-predicate
+      #'command-completion-default-include-p)
+
+    ;; Enable recursive minibuffers
+    (setq enable-recursive-minibuffers t))
+
+  ;; Optionally use the `orderless' completion style.
+  (use-package orderless
+    :init
+    ;; Configure a custom style dispatcher (see the Consult wiki)
+    ;; (setq orderless-style-dispatchers '(+orderless-consult-dispatch orderless-affix-dispatch)
+    ;;       orderless-component-separator #'orderless-escapable-split-on-space)
+    (setq completion-styles '(orderless basic)
+          completion-category-defaults nil
+          completion-category-overrides '((file (styles partial-completion)))))
+#+end_src
+** Font
+#+begin_src emacs-lisp
+  (set-face-attribute 'default (selected-frame) :height 170)
+#+end_src
