--- a/.config/emacs/config.org
+++ b/.config/emacs/config.org
@@ -186,13 +186,8 @@ I created in ./early-init.el
 ** Coding
 *** Typescript
 #+BEGIN_SRC emacs-lisp
-  ;; CURRENTLY THIS DOES NOT WORK but here maybe
-
-
-    (use-package typescript-ts-mode
-      :ensure t
-      :mode ("\\.ts\\'" . typescript-ts-mode)
-      )
+  (add-to-list 'auto-mode-alist '("\\.ts\\'" . typescript-ts-mode))
+  (add-to-list 'auto-mode-alist '("\\.tsx\\'" . tsx-mode))
 #+END_SRC
 ** Org notifications
 #+BEGIN_SRC emacs-lisp
