--- a/.config/emacs/config.org
+++ b/.config/emacs/config.org
@@ -117,7 +117,7 @@ I created in ./early-init.el
             org-log-done 'time)
       (evil-set-initial-state 'org-agenda-mode 'normal))
 #+END_SRC
-** Terminal emulation
+** TODO Terminal emulation
 #+BEGIN_SRC emacs-lisp
   (use-package vterm
     :init
@@ -298,8 +298,8 @@ I created in ./early-init.el
 #+end_src
 ** LSP
  #+begin_src emacs-lisp
-   (add-to-list 'auto-mode-alist '("\\.[jt]s?\\'" . typescript-ts-mode))
-   (add-to-list 'auto-mode-alist '("\\.[jt]s[x]?\\'" . tsx-mode))
+   (add-to-list 'auto-mode-alist '("\\.[t]s?\\'" . typescript-ts-mode))
+   (add-to-list 'auto-mode-alist '("\\.[t]s[x]?\\'" . tsx-ts-mode))
 
 
    (use-package eglot
@@ -500,7 +500,7 @@ I created in ./early-init.el
 #+end_src
 ** Font
 #+begin_src emacs-lisp
-  (set-face-attribute 'default (selected-frame) :height 150)
+  (set-face-attribute 'default (selected-frame) :height 110)
 #+end_src
 ** Project
 #+begin_src emacs-lisp
@@ -516,8 +516,11 @@ I created in ./early-init.el
             (project-find-regexp "Find regexp" ?r)
             (project-dired "Dired" ?d)
             (magit-project-status "Magit" ?m)
+            (multi-vterm "Vterm" ?t)
             ))
-    (add-to-list 'project-find-functions 'my/project-find-function))
+    (add-to-list 'project-find-functions 'my/project-find-function)
+    (bind-keys :map project-prefix-map
+               ("t" . multi-vterm-dedicated-toggle)))
 #+end_src
 ** Text scale increase/decrease
 #+begin_src emacs-lisp
