feat: add corfu

--- a/.config/emacs/config.org
+++ b/.config/emacs/config.org
@@ -3,35 +3,25 @@
 #+EMAIL: jaromods@pm.me
 
 
-** TODO Need to allow minibuffer search in fuzzy order
 ** TODO Dired creates a new buffer everytime i select a folder
-** TODO Need to understand why typescript needs restarts
-** TODO can't command in vterm
-** TODO Fix eslint-fix-all not executed on save
-By the way, managed to make it work with prettier using prettier-minor-mode which updates on save. Probably could look into that
-** TODO How to list an entire file structure with lsp
 ** TODO [#A] Look into references in org mode                        :emacs:
 ** TODO [#A] Refiling done tasks
-** TODO yasnipet, understand why parameter $0 is not working in cbel :emacs:
-** TODO configure prescient-corfu                                    :emacs:
-** TODO Fix tab in lsp as it is used in copilot                      :emacs:
-
 
 ** Global settings
 #+BEGIN_SRC emacs-lisp
-    (setq-default lexical-binding t)
-            (setq auth-sources '("~/.authinfo.gpg")
-                  whitespace-style '(face tabs spaces trailing space-before-tab newline empty space-after-tab space-mark tab-mark)
-                  display-line-numbers-type 'relative
-                  frame-resize-pixelwise t
-                  mac-option-modifier 'meta)
-            (global-whitespace-mode 1)
-            (global-display-line-numbers-mode 1)
-            (column-number-mode 1)
-            (show-paren-mode 1)
-            (tool-bar-mode 0)
-            (menu-bar-mode 0)
-            (scroll-bar-mode 0)
+  (setq auth-sources '("~/.authinfo.gpg")
+        whitespace-style '(face tabs spaces trailing space-before-tab newline empty space-after-tab space-mark tab-mark)
+        display-line-numbers-type 'relative
+        frame-resize-pixelwise t
+        mac-option-modifier 'meta
+        lexical-binding t)
+  (global-whitespace-mode 1)
+  (global-display-line-numbers-mode 1)
+  (column-number-mode 1)
+  (show-paren-mode 1)
+  (tool-bar-mode 0)
+  (menu-bar-mode 0)
+  (scroll-bar-mode 0)
 #+End_SRC
 
 ** eshell command path
@@ -205,7 +195,7 @@ I created in ./early-init.el
   :config
   (setq markdown-command "pandoc -t html5"))
 #+END_SRC
-** Copilot
+** TODO Copilot
 #+BEGIN_SRC emacs-lisp
   ;;(use-package copilot
   ;;  :straight (:host github :repo "zerolfx/copilot.el" :files ("dist" "*.el"))
@@ -239,11 +229,11 @@ I created in ./early-init.el
 
 ** Load theme
 #+begin_src emacs-lisp
-    (use-package modus-themes)
-    (load-theme 'modus-vivendi-tritanopia)
-    ;;(use-package gruber-darker-theme
-    ;;  :straight (:host github :repo "rexim/gruber-darker-theme")
-    ;;  :config (load-theme 'gruber-darker))
+    ;;(use-package modus-themes)
+    ;;(load-theme 'modus-vivendi-tritanopia)
+    (use-package gruber-darker-theme
+      :straight (:host github :repo "rexim/gruber-darker-theme")
+      :config (load-theme 'gruber-darker))
 
 #+End_src
 ** Multiple vterm buffers
@@ -295,13 +285,6 @@ I created in ./early-init.el
 ** Tools for minibuffer completion
 #+begin_src emacs-lisp
 #+end_src
-** Add node_modules path
-#+BEGIN_SRC emacs-lisp
-  (use-package add-node-modules-path
-    :hook
-    (tsx-ts-mode . add-node-modules-path)
-    (typescript-ts-mode . add-node-modules-path))
-#+END_SRC
 ** LSP
  #+begin_src emacs-lisp
    (add-to-list 'auto-mode-alist '("\\.[t]s?\\'" . typescript-ts-mode))
@@ -320,11 +303,6 @@ I created in ./early-init.el
      (tsx-ts-mode . eglot-ensure)
      (c-mode . eglot-ensure))
 
-   (use-package company
-     :ensure t
-     :config
-     (global-company-mode))
-
    (use-package flymake-eslint
      :hook
      (eglot-managed-mode
@@ -334,12 +312,12 @@ I created in ./early-init.el
                      (executable-find "eslint"))
             (flymake-eslint-enable)))))
 
-   (use-package prettier-js
-     :ensure t
+   (use-package prettier
      :hook
-     (tsx-ts-mode . prettier-js-mode)
-     (typescript-ts-mode . prettier-js-mode))
+     (typescript-ts-mode . prettier-mode)
+     (tsx-ts-mode . prettier-mode))
  #+end_src
+
 ** Git link
 #+begin_src emacs-lisp
   (use-package git-link)
@@ -561,7 +539,82 @@ I created in ./early-init.el
     :config
     (setq drag-stuff-global-mode 1))
 #+end_src
-** TODO Dashboard
+** Dashboard
+#+begin_src emacs-lisp
+  (use-package dashboard
+    :config
+    (dashboard-setup-startup-hook))
+#+end_src 
+** Doom modeline
 #+BEGIN_SRC emacs-lisp
+  (use-package doom-modeline
+    :ensure t
+    :init (doom-modeline-mode 1))
+#+END_SRC 
+** Treesitter
+#+BEGIN_SRC emacs-lisp
+  (use-package treesit-auto
+    :config
+    (treesit-auto-add-to-auto-mode-alist 'all))
+#+END_SRC
+** Corfu
+#+BEGIN_SRC emacs-lisp
+  (use-package corfu
+    :custom
+    (corfu-cycle t)                ;; Enable cycling for `corfu-next/previous'
+    (corfu-auto t)                 ;; Enable auto completion
+    (corfu-separator ?\s)          ;; Orderless field separator
+    (corfu-quit-at-boundary nil)   ;; Never quit at completion boundary
+    (corfu-quit-no-match nil)      ;; Never quit, even if there is no match
+    (corfu-preview-current nil)    ;; Disable current candidate preview
+    (corfu-preselect 'prompt)      ;; Preselect the prompt
+    (corfu-on-exact-match nil)     ;; Configure handling of exact matches
+    (corfu-scroll-margin 5)        ;; Use scroll margin
 
+    :hook ((prog-mode . corfu-mode)
+           (shell-mode . corfu-mode)
+           (vterm-mode . corfu-mode)
+           (eshell-mode . corfu-mode))
+    :bind
+    (:map corfu-map
+          ("TAB" . corfu-next)
+          ([tab] . corfu-next)
+          ("S-TAB" . corfu-previous)
+          ([backtab] . corfu-previous))
+    :init
+    (global-corfu-mode))
+
+  ;; A few more useful configurations...
+  (use-package emacs
+    :init
+    (setq tab-always-indent 'complete)
+    (setq text-mode-ispell-word-completion nil)
+    (setq read-extended-command-predicate #'command-completion-default-include-p))
+
+  ;; Use Dabbrev with Corfu!
+  (use-package dabbrev
+    ;; Swap M-/ and C-M-/
+    :bind (("M-/" . dabbrev-completion)
+           ("C-M-/" . dabbrev-expand))
+    :config
+    (add-to-list 'dabbrev-ignored-buffer-regexps "\\` ")
+    ;; Since 29.1, use `dabbrev-ignored-buffer-regexps' on older.
+    (add-to-list 'dabbrev-ignored-buffer-modes 'doc-view-mode)
+    (add-to-list 'dabbrev-ignored-buffer-modes 'pdf-view-mode))
+
+  ;; Optionally use the `orderless' completion style.
+  (use-package orderless
+    :init
+    (setq completion-styles '(orderless basic)
+          completion-category-defaults nil
+          completion-category-overrides '((file (styles partial-completion)))))
+
+  (defun corfu-enable-in-minibuffer ()
+    "Enable Corfu in the minibuffer."
+    (when (local-variable-p 'completion-at-point-functions)
+      ;; (setq-local corfu-auto nil) ;; Enable/disable auto completion
+      (setq-local corfu-echo-delay nil ;; Disable automatic echo and popup
+                  corfu-popupinfo-delay nil)
+      (corfu-mode 1)))
+  (add-hook 'minibuffer-setup-hook #'corfu-enable-in-minibuffer)
 #+END_SRC
